--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
       </div>
     </div>
   </header>
+<main>
+  <section class="popular">
+   <div class="popular-writings">
+    <h1 class="popular-title">Our Popular Tours</h1>
+   <p class="popular-details">Here are some of our popular tourist destination. People visits
+    these places whole year. Check those is you find suitable  
+   </p>
+   <ul>
+   <li class="popular-details"><p>Experience the charm of Aegean Sea backdrop and witness sunsets in the island destination.</p></li>
+   <li class="popular-details"><p>Explore the Eiffel Tower, Louvre Museum, savoring French cuisine and art.</p></li>
+   <li class="popular-details"><p>Unearth ancient mysteries amid breathtaking scenery, hiking the Trail to reach the mountaintop.</p></li>
+  </ul>
+   <p class="popular-details-end">Embark on a journey of a lifetime! Discover the romance of Paris, unearth ancient wonder Immerse. Experience the enchantment. Your adventure awaits</p>
+   <button class="btn-primary">Read More</button>
+   </div>
+   <div class="popular-img"><img src="/Images/Rectangle 4.png"></div>
+  </section>
+</main>  
 </body>
-
 </html>
