--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </div>
     </div>
   </header>
+
 <main>
   <section class="popular">
    <div class="popular-writings">
@@ -59,6 +60,28 @@
    <button class="btn-primary">Read More</button>
    </div>
    <div class="popular-img"><img src="/Images/Rectangle 4.png"></div>
+  </section>
+
+
+  <section class="destination">
+    <p class="popular-title">Choose Your Destination</p>
+    <p class="popular-details">Choose among some attractive tourist destination that you want to visit in this year</p>
+   
+   <div class="images"> 
+    <div class="images-r1">
+     <img src="/Images/Rectangle 5.png">
+     <img src="/Images/Rectangle 8.png">
+    </div>
+    <div class="images-r2">
+      <img src="/Images/Rectangle 6.png">
+      <img src="/Images/Rectangle 7.png">
+      <img src="/Images/Rectangle 9.png">
+    </div>
+    <div class="images-r3">  
+    <img src="/Images/Rectangle 11.png">
+    <img src="/Images/Rectangle 10.png">
+   </div>  
+  </div>
   </section>
 </main>  
 </body>
