reason part added

--- a/index.html
+++ b/index.html
@@ -83,6 +83,30 @@
    </div>  
   </div>
   </section>
+
+<section class="reason">
+    <p class="popular-title">Why Choose Us</p>
+    <p class="popular-details">There are three reasons that any tour lover from all avobe the world will choose our services and hospitality.</p>
+  
+  <div class="service">
+   <div class="service1">
+     <img src="/Images/hotel 1.svg">
+     <h3>Handpicked Hotels</h3>
+     <p>We have hotels of luxurious accommodations, impeccable service, scenic views and exclusive experiences.</p>
+   </div>
+   <div class="service2">
+     <img src="/Images/map 1.svg">
+     <h3>World Class Service</h3>
+     <p>We gives unparalleled experiences that foster lasting customer satisfaction and loyalty.</p>
+   </div> </div>
+
+   <div class="service3">
+     <img src="/Images/price-tag 1.svg">
+     <h3>Best Price Guarantee</h3>
+     <p>Lowest price assured, unbeatable deals, guaranteed savings of our promise for your budget satisfaction.</p>
+   </div>
+
+  </section>
 </main>  
 </body>
 </html>
