last section added

--- a/index.html
+++ b/index.html
@@ -107,6 +107,26 @@
    </div>
 
   </section>
+
+<section class="last-section">
+  <div class="newsletter">
+   <h3 class="n-title">Newsletter</h3>
+   <p class="n-details">Get your daily dose of travel news & tips. <br> Sign up today!</p>
+   <hr class="line1">
+    <form action="">
+     <input type="text" name="" id="" placeholder="Enter your name"><br>
+     <input type="email" name="" id="" placeholder="Enter your email"><br>
+     <input class="btn-secondary" type="button" value="Subscribe">
+    </form>
+  </div>
+
+  <div class="discount">
+  <div class="discount-title">
+    <p>Travel.com</p>
+    <h3>Save up to 70%</h3>
+  </div>
+  </div>
+</section>  
 </main>  
 </body>
 </html>
