footer part added

--- a/index.html
+++ b/index.html
@@ -128,5 +128,20 @@
   </div>
 </section>  
 </main>  
+
+<footer>
+  <div class="nav-title"><img src="/Images/Group 40071 (2).png">
+    Your <span class="tour">Tour</span> Guide</div>
+  <div class="footer-description">
+    The adventures we've shared will forever be etched in our hearts. The destinations you've explored with us have become a canvas of cherished moments and vibrant experiences.
+  </div>  
+  <div class="icon">
+    <img src="/Images/facebook.png">
+    <img src="/Images/insta.png">
+    <img src="/Images/twitter.png">
+  </div>
+  <hr class="line2">
+  <div class="end"> 2017, All Rights Reserved.</div>
+</footer>
 </body>
 </html>
