--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Tour Guide</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
     <nav>
-      <div class="nav-title"><img src="/Images/Group 40071 (2).png">
+      <div class="nav-title"><img src="Images/Group 40071 (2).png">
         Your <span class="tour">Tour</span> Guide</div>
       <ul>
         <li><a class="home" href="">Home</a></li>
@@ -59,7 +59,7 @@
    <p class="popular-details-end">Embark on a journey of a lifetime! Discover the romance of Paris, unearth ancient wonder Immerse. Experience the enchantment. Your adventure awaits</p>
    <button class="btn-primary">Read More</button>
    </div>
-   <div class="popular-img"><img src="/Images/Rectangle 4.png"></div>
+   <div class="popular-img"><img src="Images/Rectangle 4.png"></div>
   </section>
 
 
@@ -69,17 +69,17 @@
    
    <div class="images"> 
     <div class="images-r1">
-     <img src="/Images/Rectangle 5.png">
-     <img src="/Images/Rectangle 8.png">
+     <img src="Images/Rectangle 5.png">
+     <img src="Images/Rectangle 8.png">
     </div>
     <div class="images-r2">
-      <img src="/Images/Rectangle 6.png">
-      <img src="/Images/Rectangle 7.png">
-      <img src="/Images/Rectangle 9.png">
+      <img src="Images/Rectangle 6.png">
+      <img src="Images/Rectangle 7.png">
+      <img src="Images/Rectangle 9.png">
     </div>
     <div class="images-r3">  
-    <img src="/Images/Rectangle 11.png">
-    <img src="/Images/Rectangle 10.png">
+    <img src="Images/Rectangle 11.png">
+    <img src="Images/Rectangle 10.png">
    </div>  
   </div>
   </section>
@@ -90,18 +90,18 @@
   
   <div class="service">
    <div class="service1">
-     <img src="/Images/hotel 1.svg">
+     <img src="Images/hotel 1.svg">
      <h3>Handpicked Hotels</h3>
      <p>We have hotels of luxurious accommodations, impeccable service, scenic views and exclusive experiences.</p>
    </div>
    <div class="service2">
-     <img src="/Images/map 1.svg">
+     <img src="Images/map 1.svg">
      <h3>World Class Service</h3>
      <p>We gives unparalleled experiences that foster lasting customer satisfaction and loyalty.</p>
    </div> </div>
 
    <div class="service3">
-     <img src="/Images/price-tag 1.svg">
+     <img src="Images/price-tag 1.svg">
      <h3>Best Price Guarantee</h3>
      <p>Lowest price assured, unbeatable deals, guaranteed savings of our promise for your budget satisfaction.</p>
    </div>
@@ -130,15 +130,15 @@
 </main>  
 
 <footer>
-  <div class="nav-title"><img src="/Images/Group 40071 (2).png">
+  <div class="nav-title"><img src="Images/Group 40071 (2).png">
     Your <span class="tour">Tour</span> Guide</div>
   <div class="footer-description">
     The adventures we've shared will forever be etched in our hearts. The destinations you've explored with us have become a canvas of cherished moments and vibrant experiences.
   </div>  
   <div class="icon">
-    <img src="/Images/facebook.png">
-    <img src="/Images/insta.png">
-    <img src="/Images/twitter.png">
+    <img src="Images/facebook.png">
+    <img src="Images/insta.png">
+    <img src="Images/twitter.png">
   </div>
   <hr class="line2">
   <div class="end"> 2017, All Rights Reserved.</div>
